--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Market Analysis</title>
-
-    <!-- Favicon -->
     <link rel="icon" href="/static/favicon.ico" />
-
-    <!-- SEO Meta Tags -->
     <meta name="description" content="Market Analysis App - Analyze the secondary electronics market." />
     <meta name="keywords" content="market, analysis, electronics, trade" />
     <meta name="author" content="Your Name or Company" />
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="/static/css/main.css" />
+    <link href="/static/css/main.97e0cdb6.css" rel="stylesheet" />
 </head>
 <body>
     <noscript>
-        <strong>Ta aplikacja wymaga w³¹czonego JavaScript do dzia³ania.</strong>
+        <strong>Ta aplikacja wymaga wÅ‚Ä…czonego JavaScript do dziaÅ‚ania.</strong>
     </noscript>
-    <div id="root"></div>
-
-    <!-- React App Script -->
-    <script src="/static/js/main.js"></script>
+    <div id="root"></div> <!-- Miejsce, gdzie React montuje aplikacjÄ™ -->
+    <script src="/static/js/main.a0dc63bb.js" defer></script>
 </body>
 </html>
